# CMakeLists.txt — Project
#
# Adds this directory's translation units (and headers, for Xcode) to the single app target
# defined in the root CMakeLists, and puts the directory on the include path. Bare filenames.

target_sources(popnrhythmin PRIVATE
    AcViewerDetailCell.m
    AcViewerMusicCell.m
    AcViewerOptionCell.m
    AcViewerSplitViewController.mm
    AppDelegate.mm
    AppFont.m
    BirthDayViewController.mm
    CheckerCategoryCell.m
    CommonAlertView.mm
    CommunicatingView.mm
    CustomAlertView.mm
    CustomButton.m
    CustomSplitViewController.m
    CustomTextView.m
    DelayImageView.m
    DownloadMain.m
    DownloadProgresView.m
    Downloader.m
    FriendListCell.mm
    FriendListDetail.mm
    FriendListDetailChara.mm
    FriendListViewController.mm
    FriendMngTopViewController.mm
    FriendReplyCell.mm
    FriendReplyViewController.mm
    FriendRequestCell.m
    FriendScoreTableCell.m
    GameEffectView.mm
    HowToView.mm
    HowToViewCtrl.m
    ImageDownloader.m
    MainViewController.mm
    MapListCell.m
    OverScoreLogCell.m
    PolicyView.mm
    PopkunSizeViewCtrl.mm
    PresentBoxCell.m
    RecommendListCell.m
    SettingCustomerTableViewController.mm
    SettingGameTableViewController.mm
    SettingHowtoTableViewController.mm
    SettingOtherTableViewController.mm
    SettingTableViewController.m
    SortCell.m
    SoundSettingView.mm
    StoreAcMusicInfo.m
    StoreAcvManageViewController.mm
    StoreDetailCopyrightCell.m
    StoreDetailHeaderView.m
    StoreDetailMusicCell.m
    StoreDetailViewController.mm
    StoreDownloadManager.m
    StoreDownloadTask.m
    StoreImageView.m
    StoreMainViewController.mm
    StoreManageViewController.mm
    StoreMusicInfo.m
    StorePackCell.m
    StorePackDetailViewPad.m
    StorePackInfo.m
    StorePackInfoDownloader.m
    StorePackListController.m
    StorePackMusicView.m
    StorePackView.mm
    StorePromotionTableCell.m
    StorePromotionView.mm
    StoreTableCell.m
    StoreUtil.m
    StoreViewController.mm
    SubMapListCell.m
    TouchRangeView.m
    TouchRangeViewCtrl.mm
    TouchableScrollView.m
    TouchableTableView.m
    YearAndMonthPicker.m
    main.m
    AcViewerDetailCell.h
    AcViewerMusicCell.h
    AcViewerOptionCell.h
    AcViewerSplitViewController.h
    AppDelegate.h
    AppFont.h
    BirthDayViewController.h
    CheckerCategoryCell.h
    CommonAlertView.h
    CommunicatingView.h
    CustomAlertView.h
    CustomButton.h
    CustomSplitViewController.h
    CustomTextView.h
    DelayImageView.h
    DownloadMain.h
    DownloadProgresView.h
    Downloader.h
    FriendListCell.h
    FriendListDetail.h
    FriendListDetailChara.h
    FriendListViewController.h
    FriendMngTopViewController.h
    FriendReplyCell.h
    FriendReplyViewController.h
    FriendRequestCell.h
    FriendScoreTableCell.h
    GameEffectView.h
    HowToView.h
    HowToViewCtrl.h
    ImageDownloader.h
    MainViewController.h
    MapListCell.h
    OverScoreLogCell.h
    PolicyView.h
    PopkunSizeViewCtrl.h
    PresentBoxCell.h
    RecommendListCell.h
    SettingCustomerTableViewController.h
    SettingGameTableViewController.h
    SettingHowtoTableViewController.h
    SettingOtherTableViewController.h
    SettingTableViewController.h
    SortCell.h
    SoundSettingView.h
    StoreAcMusicInfo.h
    StoreAcvManageViewController.h
    StoreDetailCopyrightCell.h
    StoreDetailHeaderView.h
    StoreDetailMusicCell.h
    StoreDetailViewController.h
    StoreDownloadManager.h
    StoreDownloadTask.h
    StoreImageView.h
    StoreMainViewController.h
    StoreManageViewController.h
    StoreMusicInfo.h
    StorePackCell.h
    StorePackDetailViewPad.h
    StorePackInfo.h
    StorePackInfoDownloader.h
    StorePackListController.h
    StorePackMusicView.h
    StorePackView.h
    StorePromotionTableCell.h
    StorePromotionView.h
    StoreTableCell.h
    StoreUtil.h
    StoreViewController.h
    SubMapListCell.h
    TouchRangeView.h
    TouchRangeViewCtrl.h
    TouchableScrollView.h
    TouchableTableView.h
    YearAndMonthPicker.h
)

target_include_directories(popnrhythmin PRIVATE .)

add_subdirectory(Game)
add_subdirectory(System)
