# CMakeLists.txt — Project
#
# Adds this directory's translation units (and headers, for Xcode) to the single app target
# defined in the root CMakeLists, and puts the directory on the include path. Bare filenames.

target_sources(popnrhythmin PRIVATE
    FriendScoreMainView.mm
    InputConversionPassViewController.mm
    InputKIDViewCtrl.mm
    InputNameViewCtrl.mm
    MapSelectSplitViewController.mm
    MapSelectViewController.mm
    RecommendCore.m
    RecommendWebView.m
    SearchView.mm
    DefaultDataDownloadView.mm
    FriendMngTopSplitViewController.mm
    InputOTPViewCtrl.mm
    InviteTopViewControllerPad.mm
    PopnLinkTopSplitViewController.mm
    PopnLinkTopViewController.mm
    RewardNetworkURLConnection.m
    SettingTableSplitViewController.mm
    AcViewerCategoryViewController.mm
    CheckerCategoryViewController.mm
    FreeRequestDetail.mm
    OverScoreLogViewController.mm
    PresentBoxViewController.mm
    QuizMainViewController.mm
    RecommendViewController.mm
    SubMapSelectViewController.mm
    AcViewerMusicViewController.mm
    FreeRequestListViewController.mm
    FriendRequestTable.mm
    FriendRequestViewController.mm
    SettingTopViewController.mm
    SortSelectViewController.mm
    AcceptPolicyViewController.mm
    CheckerDetail.mm
    CheckerMusicViewController.mm
    DevDataDownloader.m
    HttpConn.m
    InputKidViewController.mm
    InviteTopViewController.mm
    LoginBonusView.mm
    RandomLoginBonusView.mm
    AcViewerHiSpeedViewController.mm
    AcViewerHidSudViewController.mm
    AcViewerPopKunViewController.mm
    AcViewerRanMirViewController.mm
    DownloadImageView.m
    FreeRequestListCell.mm
    MapAnnotation.m
    MyInviteCodeViewController.mm
    PurchaseStore.m
    RecommendAdId.m
    RecommendNetwork.m
    RecommendWebAPI.m
    RecommendWebViewController.m
    RewardNetwork.m
    RewardNetworkError.m
    RewardNetworkIndicator.m
    RewardNetworkMessage.m
    RewardNetworkPasteBoard.m
    RewardNetworkUdid.m
    RewardNetworkUtilities.m
    RewardNetworkWebAPI.m
    RewardNetworkWebViewController.m
    AcViewerDetailCell.m
    AcViewerMusicCell.mm
    AcViewerOptionCell.m
    AcViewerSplitViewController.mm
    AppDelegate.mm
    AppFont.m
    BirthDayViewController.mm
    CheckerCategoryCell.mm
    CommonAlertView.mm
    CommunicatingView.mm
    CustomAlertView.mm
    CustomButton.m
    CustomSplitViewController.m
    CustomTextView.m
    DelayImageView.m
    DownloadMain.mm
    DownloadProgresView.m
    Downloader.m
    FriendListCell.mm
    FriendListDetail.mm
    FriendListDetailChara.mm
    FriendListViewController.mm
    FriendMngTopViewController.mm
    FriendReplyCell.mm
    FriendReplyViewController.mm
    FriendRequestCell.mm
    FriendScoreTableCell.mm
    GameEffectView.mm
    HowToView.mm
    HowToViewCtrl.mm
    ImageDownloader.m
    MainViewController.mm
    MapListCell.mm
    OverScoreLogCell.m
    PolicyView.mm
    PopkunSizeViewCtrl.mm
    PresentBoxCell.mm
    RecommendListCell.mm
    SettingCustomerTableViewController.mm
    SettingGameTableViewController.mm
    SettingHowtoTableViewController.mm
    SettingOtherTableViewController.mm
    SettingTableViewController.mm
    SortCell.mm
    SoundSettingView.mm
    StoreAcMusicInfo.m
    StoreAcvManageViewController.mm
    StoreDetailCopyrightCell.m
    StoreDetailHeaderView.m
    StoreDetailMusicCell.m
    StoreDetailViewController.mm
    StoreDownloadManager.m
    StoreDownloadTask.m
    StoreImageView.m
    StoreMainViewController.mm
    StoreManageViewController.mm
    StoreMusicInfo.m
    StorePackCell.m
    StorePackDetailViewPad.m
    StorePackInfo.m
    StorePackInfoDownloader.m
    StorePackListController.m
    StorePackMusicView.m
    StorePackView.mm
    StorePromotionTableCell.m
    StorePromotionView.mm
    StoreTableCell.m
    StoreUtil.m
    StoreViewController.mm
    SubMapListCell.mm
    TouchRangeView.m
    TouchRangeViewCtrl.mm
    TouchableScrollView.m
    TouchableTableView.m
    YearAndMonthPicker.m
    main.m
    AcViewerCategoryCell.mm
    CJSONDataSerializer.m
    CJSONDeserializer.m
    CJSONScanner.m
    CJSONSerializer.m
    CSerializedJSONData.m
    CheckerMusicCell.mm
    QuizCell.mm
    ViewUtility.m
    neWindow.m
    AcViewerOptionViewController.mm
    CDataScanner.m
    ConversionView.mm
    CustomWebView.mm
    HowToViewCtrlPad.mm
    StoreDialogView.m
    AcViewerDetailCell.h
    AcViewerMusicCell.h
    AcViewerOptionCell.h
    AcViewerSplitViewController.h
    AppDelegate.h
    AppFont.h
    BirthDayViewController.h
    CheckerCategoryCell.h
    CommonAlertView.h
    CommunicatingView.h
    CustomAlertView.h
    CustomButton.h
    CustomSplitViewController.h
    CustomTextView.h
    DelayImageView.h
    DownloadMain.h
    DownloadProgresView.h
    Downloader.h
    FriendListCell.h
    FriendListDetail.h
    FriendListDetailChara.h
    FriendListViewController.h
    FriendMngTopViewController.h
    FriendReplyCell.h
    FriendReplyViewController.h
    FriendRequestCell.h
    FriendScoreTableCell.h
    GameEffectView.h
    HowToView.h
    HowToViewCtrl.h
    ImageDownloader.h
    MainViewController.h
    MapListCell.h
    OverScoreLogCell.h
    PolicyView.h
    PopkunSizeViewCtrl.h
    PresentBoxCell.h
    RecommendListCell.h
    SettingCustomerTableViewController.h
    SettingGameTableViewController.h
    SettingHowtoTableViewController.h
    SettingOtherTableViewController.h
    SettingTableViewController.h
    SortCell.h
    SoundSettingView.h
    StoreAcMusicInfo.h
    StoreAcvManageViewController.h
    StoreDetailCopyrightCell.h
    StoreDetailHeaderView.h
    StoreDetailMusicCell.h
    StoreDetailViewController.h
    StoreDownloadManager.h
    StoreDownloadTask.h
    StoreImageView.h
    StoreMainViewController.h
    StoreManageViewController.h
    StoreMusicInfo.h
    StorePackCell.h
    StorePackDetailViewPad.h
    StorePackInfo.h
    StorePackInfoDownloader.h
    StorePackListController.h
    StorePackMusicView.h
    StorePackView.h
    StorePromotionTableCell.h
    StorePromotionView.h
    StoreTableCell.h
    StoreUtil.h
    StoreViewController.h
    SubMapListCell.h
    TouchRangeView.h
    TouchRangeViewCtrl.h
    TouchableScrollView.h
    TouchableTableView.h
    YearAndMonthPicker.h
    AcViewerCategoryCell.h
    CJSONDataSerializer.h
    CJSONDeserializer.h
    CJSONScanner.h
    CJSONSerializer.h
    CSerializedJSONData.h
    CheckerMusicCell.h
    QuizCell.h
    ViewUtility.h
    neWindow.h
    AcViewerOptionViewController.h
    CDataScanner.h
    ConversionView.h
    CustomWebView.h
    HowToViewCtrlPad.h
    StoreDialogView.h
    AcViewerHiSpeedViewController.h
    AcViewerHidSudViewController.h
    AcViewerPopKunViewController.h
    AcViewerRanMirViewController.h
    DownloadImageView.h
    FreeRequestListCell.h
    MapAnnotation.h
    MyInviteCodeViewController.h
    PurchaseStore.h
    RecommendAdId.h
    RecommendNetwork.h
    RecommendWebAPI.h
    RecommendWebViewController.h
    RewardNetwork.h
    RewardNetworkError.h
    RewardNetworkIndicator.h
    RewardNetworkMessage.h
    RewardNetworkPasteBoard.h
    RewardNetworkUdid.h
    RewardNetworkUtilities.h
    RewardNetworkWebAPI.h
    RewardNetworkWebViewController.h
    AcceptPolicyViewController.h
    CheckerDetail.h
    CheckerMusicViewController.h
    DevDataDownloader.h
    HttpConn.h
    InputKidViewController.h
    InviteTopViewController.h
    LoginBonusView.h
    RandomLoginBonusView.h
    AcViewerMusicViewController.h
    FreeRequestListViewController.h
    FriendRequestTable.h
    FriendRequestViewController.h
    SettingTopViewController.h
    SortSelectViewController.h
    AcViewerCategoryViewController.h
    CheckerCategoryViewController.h
    FreeRequestDetail.h
    OverScoreLogViewController.h
    PresentBoxViewController.h
    QuizMainViewController.h
    RecommendViewController.h
    SubMapSelectViewController.h
    DefaultDataDownloadView.h
    FriendMngTopSplitViewController.h
    InputOTPViewCtrl.h
    InviteTopViewControllerPad.h
    PopnLinkTopSplitViewController.h
    PopnLinkTopViewController.h
    RewardNetworkURLConnection.h
    SettingTableSplitViewController.h
    FriendScoreMainView.h
    InputConversionPassViewController.h
    InputKIDViewCtrl.h
    InputNameViewCtrl.h
    MapSelectSplitViewController.h
    MapSelectViewController.h
    RecommendCore.h
    RecommendWebView.h
    SearchView.h
)

target_include_directories(popnrhythmin PRIVATE .)

add_subdirectory(Game)
add_subdirectory(System)
